--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 GPUtil==1.4.0
-htmd
-MDAnalysis==2.7.0
+MDAnalysis==2.8.0
 numpy==1.24.3
-openmm
-pandas==2.0.3
-rdkit==2023.3.2
+OpenMM==8.2.0
+pandas==2.2.3
+rdkit
 setuptools
